    is not known.
  * Multiple external special remote processes for the same remote will be
    started as needed when using -J. This should not beak any existing
    external special remotes, because running multiple git-annex commands
    at the same time could already start multiple processes for the same
    external special remotes.

 -- Joey Hess <id@joeyh.name>  Mon, 26 Sep 2016 16:46:19 -0400

git-annex (6.20160923) unstable; urgency=medium

  * Rate limit console progress display updates to 10 per second.
    Was updating as frequently as changes were reported, up to hundreds of
    times per second, which used unncessary bandwidth when running git-annex
    over ssh etc.
  * Make --json and --quiet work when used with -J.
    Previously, -J override the other options.
  * addurl, get: Added --json-progress option, which adds progress
    objects to the json output.
  * Remove key:null from git-annex add --json output.
  * copy, move, mirror: Support --json and --json-progress.
  * Improve gpg secret key list parser to deal with changes in gpg 2.1.15.
    Fixes key name display in webapp.
  * info: Support being passed a treeish, and show info about the annexed
    files in it similar to how a directory is handled.
  * sync: Previously, when run in a branch with a slash in its name,
    such as "foo/bar", the sync branch was "synced/bar". That conflicted
    with the sync branch used for branch "bar", so has been changed to
    "synced/foo/bar".
  * Note that if you're using an old version of git-annex to sync with
    a branch with a slash in its name, it won't see some changes synced by
    this version, and this version won't see some changes synced by the older
    version. This is not a problem if there's a central bare repository,
    but may impact other configurations until git-annex is upgraded to this
    version.
  * adjust: Previously, when adjusting a branch with a slash in its name,