@@ -5,8 +5,6 @@
  - Licensed under the GNU GPL version 3 or higher.
  -}
 
-{-# LANGUAGE CPP #-}
-
 module Main where
 
 import System.Environment
@@ -48,6 +46,8 @@ mklibs top = do
 	writeFile (top </> "libdirs") (unlines libdirs)
 	writeFile (top </> "gconvdir")
 		(parentDir $ Prelude.head $ filter ("/gconv/" `isInfixOf`) glibclibs)
+	writeFile (top </> "localedir")
+		(parentDir $ Prelude.head $ filter ("/locale/" `isInfixOf`) glibclibs)
 	
 	let linker = Prelude.head $ filter ("ld-linux" `isInfixOf`) libs'
 	mapM_ (installLinkerShim top linker) exes
@@ -73,18 +73,6 @@ installLinkerShim top linker exe = do
 		[ "#!/bin/sh"
 		, "GIT_ANNEX_PROGRAMPATH=\"$0\""
 		, "export GIT_ANNEX_PROGRAMPATH"
-#ifdef MIN_VERSION_GLASGOW_HASKELL
-#if ! MIN_VERSION_GLASGOW_HASKELL(7,10,0,0)
-#define NEED_LOCPATH_WORKAROUND
-#endif
-#else
-#define NEED_LOCPATH_WORKAROUND
-#endif
-#ifdef NEED_LOCPATH_WORKAROUND
-		-- workaround for https://ghc.haskell.org/trac/ghc/ticket/7695
-		, "LOCPATH=/dev/null"
-		, "export LOCPATH"
-#endif
 		, "exec \"$GIT_ANNEX_DIR/" ++ exelink ++ "\" --library-path \"$GIT_ANNEX_LD_LIBRARY_PATH\" \"$GIT_ANNEX_DIR/shimmed/" ++ base ++ "/" ++ base ++ "\" \"$@\""
 		]
 	modifyFileMode exe $ addModes executeModes
